--- a/app/src/main/res/layout/exrow_third.xml
+++ b/app/src/main/res/layout/exrow_third.xml
@@ -30,7 +30,7 @@
                     android:layout_width="58dp"
                     android:layout_height="58dp"
                     android:layout_gravity="left"
-                    android:src="@android:drawable/ic_dialog_map" />
+                    android:src="@drawable/phy" />
             </LinearLayout>
 
             <LinearLayout
